--- a/utilsview/src/main/res/values/strings.xml
+++ b/utilsview/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">utilsview</string>
+    <string name="loading_content_hint">加载中…</string>
+    <string name="no_more">没有更多</string>
 </resources>
