--- a/utilsview/src/main/res/values/strings.xml
+++ b/utilsview/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">utilsview</string>
     <string name="loading_content_hint">加载中…</string>
     <string name="no_more">没有更多</string>
+    <string name="cancel">取消</string>
 </resources>
